--- a/frontend/src/@core/components/customizer/styles.module.css
+++ b/frontend/src/@core/components/customizer/styles.module.css
@@ -26,6 +26,10 @@
       display: none;
     }
 
+    &.show .togglerMedal {
+      display: show;
+    }
+
     .header,
     .customizerBody {
       padding-inline: 10px;
@@ -47,6 +51,28 @@
   color: var(--mui-palette-primary-contrastText);
   border-start-start-radius: 50px;
   border-end-start-radius: 50px;
+}
+
+.togglerMedal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  width: max-content;
+  position: absolute;
+  inset-block-start: 30%;
+  inset-inline-end: 100%;
+  transform: translateY(-20%);
+  padding: 8px;
+  background-color: var(--primary-color);
+  color: var(--mui-palette-primary-contrastText);
+  border-start-start-radius: 50px;
+  border-end-start-radius: 50px;
+}
+
+.customT {
+  /* transform: translateX(400px); */
+  display: none;
 }
 
 .header {
